@@ -13,6 +13,7 @@ documents those changes that are of interest to users and admins.
     differ.
  -- Use the slurm_getpwuid_r wrapper of getpwuid_r to handle possible
     interrupts.
+ -- Improve qsub wrapper support for passing environment variables.
 
 * Changes in Slurm 14.03.11
 ===========================
